2004-06-09  Jesper Harder  <harder@ifa.au.dk>

	* message.el (message-send-mail-with-sendmail): Use with-current-buffer.

2004-06-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* message.el (message-text-with-property): Make it fast and accept
	optional arguments.
	(message-strip-forbidden-properties): Use it.
	(message-fix-before-sending): Follow the m-t-w-p change.

	* gnus-ems.el (gnus-remove-image): Follow the m-t-w-p change.

2004-06-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (article-hide-headers): Don't change the buffer
	mistakenly when performing mml-preview even if
	gnus-single-article-buffer is nil.

2004-06-08  Kai Grossjohann  <kgrossjo@eu.uu.net>

	* message.el (message-expand-name-databases): New user option.
	(message-expand-name): Use it.

2004-06-07  Teodor Zlatanov  <tzz@lifelogs.com>

	* spam.el (spam-report-articles-resend)
	(spam-report-resend-register-routine): allow ham reporting
	(spam-report-resend-register-ham-routine): simple wrapper
	(spam-registration-functions): add ham resending functions
	(spam-list-of-processors): add ham resend processor

	* gnus.el (ham-resend-to): new group parameter
	(spam-process): add ham resend option

	* spam-report.el (spam-report-resend): allow reporting ham
	(spam-report-resend-ham): simple wrapper

2004-06-06  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* message.el (message-cite-articles-with-x-no-archive): New
	variable. 
	(message-cite-original): Use it.

2004-06-04  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* message.el (message-cite-original): Respect X-No-Archive. 

2004-06-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (article-hide-headers): Refer to the values for
	gnus-ignored-headers and gnus-visible-headers in the summary
	buffer since a user may have set them as group parameters.

2004-06-03  Teodor Zlatanov  <tzz@lifelogs.com>

	* assistant.el (assistant-node-name): new convenience function
	(assistant-render-text, assistant-render-node): error handling,