@@ -1,3 +1,11 @@
+2004-06-10  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* gnus-ems.el (gnus-remove-image): Don't use
+	message-text-with-property; remove only the image found first.
+
+	* gnus-smas.el (gnus-xmas-remove-image): Remove only the image
+	found first.
+
 2004-06-09  Jesper Harder  <harder@ifa.au.dk>
 
 	* message.el (message-send-mail-with-sendmail): Use with-current-buffer.
